Node modules folder remove + refactoring
